fix vh on mobile

--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,7 +1,8 @@
 .home__container {
   font-size: 0.75em;
-  width: 100vw;
-  height: 100vh;
+  width: 100vw;  
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,19 +20,16 @@
 
 .home__rows {
   height: calc(
-    100vh - 3.5rem - 65px - 65px - 3rem
+    100% - 3.5rem - 65px - 65px - 3rem
   ); /* header, listHeader, listFooter, margin-bottom  */
   overflow: scroll;
 }
 
 @media only screen and (max-width: 600px) {
-  .home__container {
-    height: -webkit-fill-available;
-  }
   .home__main {
     margin: 0rem 0.8rem 1rem 0.8rem;
     width: calc(100vw - 1.6rem);
-    height: calc(100vh - 4.5rem); /* 3.5 header + 1 margin */
+    height: calc(100% - 4.5rem); /* 3.5 header + 1 margin */
   }
   .home__rows {
     height: calc(
